# so-rust

./: Cargo.toml
examples/channel/: reader.rs  writer.rs
examples/pubsub/: publisher.rs  subscriber.rs
examples/reqrep/: client.rs  server.rs
src/: client.rs  lib.rs  main.rs  reqrep.rs  server.rs  so.rs
src/so/: channel.rs  layer.rs  mod.rs  pubsub.rs  reqrep.rs  socket.rs
