[package]
name = "so-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"

[[bin]]
name = "server"
path = "examples/reqrep/server.rs"

[[bin]]
name = "client"
path = "examples/reqrep/client.rs"

[[bin]]
name = "subscriber"
path = "examples/pubsub/subscriber.rs"

[[bin]]
name = "publisher"
path = "examples/pubsub/publisher.rs"

[[bin]]
name = "writer"
path = "examples/channel/writer.rs"

[[bin]]
name = "reader"
path = "examples/channel/reader.rs"